[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "0.10"
num-derive = "0.4"
num-traits = "0.2"
solana-program = "1.17.2"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.17.2"
solana-sdk = "1.17.2"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
